<resources>
    <string name="app_name">Kola Translate</string>
    <string name="translate">Translate</string>
    <string name="phrasebook">Phrasebook</string>
    <string name="sms_translation">SMS translation</string>
    <string name="settings">Settings</string>
    <string name="enter_text">Enter text</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="tap_to_translate">Tap to translate</string>
    <string name="translation_settings">Translation settings</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="phonetic_symbol">Phonetic symbol</string>
    <string name="enable_tap_to_translate">Enable Tap to Translate</string>
    <string name="show_notification">Show notification</string>
    <string name="uk_phonetic">UK phonetic</string>
    <string name="us_phonetic">US phonetic</string>
    <string name="clear_history">Clear history</string>
    <string name="feedback">Feedback</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="about_kola_translate">About Kola Translate</string>
    <string name="notification_tap_translate_open">Tap to Translate is on</string>
    <string name="more_options">More options</string>
    <string name="clear_translate_history">Clear translate history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="sms_translate">Sms Translate</string>

    <string name="pref_translate_title">Translate source</string>
    <string name="pref_translate_summary_default">YouDao</string>
    <string name="pref_translate_value_default">YouDao</string>
    <array name="pref_translate_source_entries">
        <item>YouDao</item>
        <item>Baidu</item>
    </array>
    <array name="pref_translate_source_values">
        <item>YouDao</item>
        <item>Baidu</item>
    </array>

    <string name="pref_showFrameTypes_default">notification</string>
    <array name="pref_showFrameTypes_entries">
        <item>Notification</item>
        <item>Float Frame</item>
    </array>
    <array name="pref_showFrameTypes_values">
        <item>notification</item>
        <item>floating frame</item>
    </array>

    <string name="pref_phonetic_default">uk phonetic</string>
    <array name="pref_phonetic_entries">
        <item>UK Phonetic</item>
        <item>US Phonetic</item>
    </array>
    <array name="pref_phonetic_values">
        <item>uk phonetic</item>
        <item>us phonetic</item>
    </array>
</resources>
