<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/tap_to_translate"
        android:key="pref_key_copy_drop_settings">
        <CheckBoxPreference
            android:key="pref_key_tap_to_translate"
            android:summary="summary"
            android:title="@string/enable_tap_to_translate"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_key_show_notification"
            android:summary="summary"
            android:title="@string/show_notification"
            android:defaultValue="false"/>
        <ListPreference
            android:key="pref_key_show_translate_ways"
            android:summary="@string/pref_showFrameTypes_default"
            android:title="Show ways"
            android:dialogTitle="Choose Showing way"
            android:entries="@array/pref_showFrameTypes_entries"
            android:entryValues="@array/pref_showFrameTypes_values"
            android:defaultValue="@string/pref_showFrameTypes_default"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/translation_settings">
        <ListPreference
            android:key="pref_key_phonetic_list"
            android:summary="@string/pref_phonetic_default"
            android:title="Phonetic symbol"
            android:dialogTitle="Phonetic Symbol"
            android:entries="@array/pref_phonetic_entries"
            android:entryValues="@array/pref_phonetic_values"
            android:defaultValue="@string/pref_phonetic_default" />

        <Preference android:key="pref_key_clear_history"
            android:title="@string/clear_history"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_and_feedback">
        <Preference android:title="@string/feedback">
            <intent android:action="android.intent.action.SENDTO"
                android:data="mailto:664864743@qq.com"/>
        </Preference>
        <Preference android:title="@string/open_source_licenses"/>
        <Preference android:title="@string/about_kola_translate"/>
    </PreferenceCategory>
</PreferenceScreen>